[gd_scene load_steps=14 format=3 uid="uid://bwqgu45aoayuv"]

[ext_resource type="Script" path="res://main.gd" id="1_5vqbo"]
[ext_resource type="PackedScene" uid="uid://cod53qy8r73ec" path="res://player.tscn" id="1_vftuc"]
[ext_resource type="PackedScene" uid="uid://bt43q02nta0g5" path="res://mob.tscn" id="2_a13ya"]
[ext_resource type="PackedScene" uid="uid://bmxd0uqx3ovfy" path="res://mob2.tscn" id="3_6qb0s"]
[ext_resource type="PackedScene" uid="uid://dux0ntxsvlfv3" path="res://hud.tscn" id="4_7qu6t"]
[ext_resource type="PackedScene" uid="uid://dgrl0mnxo2e03" path="res://mob_3.tscn" id="4_m5nxx"]
[ext_resource type="PackedScene" uid="uid://bey3bvt6fpikk" path="res://mob_4.tscn" id="5_pobki"]
[ext_resource type="PackedScene" uid="uid://dqw6wcau1abx4" path="res://power_up.tscn" id="6_tlfrt"]
[ext_resource type="PackedScene" uid="uid://bti4m6atsonag" path="res://power_up_2.tscn" id="7_qc1g6"]
[ext_resource type="PackedScene" uid="uid://ddvgwetlg43d6" path="res://pause_screen.tscn" id="9_tg6nb"]

[sub_resource type="Gradient" id="Gradient_rb0y2"]
colors = PackedColorArray(0.894118, 0.0862745, 0.309804, 1, 0.129412, 0.184314, 0.333333, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vbk22"]
gradient = SubResource("Gradient_rb0y2")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.83871, 0.152074)

[sub_resource type="Curve2D" id="Curve2D_u8ktt"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_5vqbo")
mob_scene = Array[PackedScene]([ExtResource("2_a13ya"), ExtResource("3_6qb0s"), ExtResource("4_m5nxx"), ExtResource("5_pobki")])
powerups_scene = Array[PackedScene]([ExtResource("6_tlfrt"), ExtResource("7_qc1g6")])

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_vbk22")

[node name="MobTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="StartTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
one_shot = true

[node name="PowerUpTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="StartPosition" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(240, 450)

[node name="Player" parent="." instance=ExtResource("1_vftuc")]
unique_name_in_owner = true

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_u8ktt")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
unique_name_in_owner = true

[node name="HUD" parent="." instance=ExtResource("4_7qu6t")]
unique_name_in_owner = true

[node name="PauseScreen" parent="." instance=ExtResource("9_tg6nb")]
unique_name_in_owner = true
visible = false

[node name="PowerUp" parent="." instance=ExtResource("6_tlfrt")]
unique_name_in_owner = true
visible = false

[node name="PowerUp2" parent="." instance=ExtResource("7_qc1g6")]
unique_name_in_owner = true
visible = false

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_power_up_timer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="music_off" from="PauseScreen" to="." method="_on_pause_screen_music_off"]
[connection signal="music_on" from="PauseScreen" to="." method="_on_pause_screen_music_on"]
[connection signal="restart" from="PauseScreen" to="." method="_on_pause_screen_restart"]
[connection signal="double_score" from="PowerUp2" to="." method="_on_power_up_2_double_score"]
